unpackaged/main/default/objects/OpportunityContactRole/fields/Contact_Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_ID__c</fullName>
    <description>Contact Role ID</description>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contact Role ID</inlineHelpText>
    <label>Contact Role ID</label>
    <type>Text</type>
</CustomField>