unpackaged/main/default/objects/OpportunityContactRole/fields/Do_Not_Create_PSC__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Create_PSC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>prevents flows that create partial soft credit record when opportunity contact role is created</description>
    <inlineHelpText>prevents flows that create partial soft credit record when opportunity contact role is created</inlineHelpText>
    <label>Do Not Create PSC</label>
    <type>Checkbox</type>
</CustomField>