unpackaged/main/default/objects/OpportunityContactRole/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <label>Legacy ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>