unpackaged/main/default/objects/OpportunityContactRole/fields/Related_Partial_Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>Related_Partial_Soft_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Partial Soft Credit</label>
    <referenceTo>npsp__Partial_Soft_Credit__c</referenceTo>
    <relationshipLabel>Opportunity Contact Role</relationshipLabel>
    <relationshipName>Opportunity_Contact_Role</relationshipName>
    <type>Lookup</type>
</CustomField>